@@ -34,21 +34,18 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import lombok.RequiredArgsConstructor;
 
 import org.apache.commons.lang3.StringUtils;
 import org.hisp.dhis.category.CategoryOption;
 import org.hisp.dhis.category.CategoryOptionCombo;
-import org.hisp.dhis.commons.util.TextUtils;
 import org.hisp.dhis.dataelement.DataElement;
 import org.hisp.dhis.organisationunit.OrganisationUnit;
 import org.hisp.dhis.program.Program;
 import org.hisp.dhis.program.ProgramStage;
 import org.hisp.dhis.programrule.ProgramRule;
 import org.hisp.dhis.programrule.ProgramRuleService;
-import org.hisp.dhis.relationship.RelationshipKey;
 import org.hisp.dhis.relationship.RelationshipType;
 import org.hisp.dhis.trackedentity.TrackedEntityAttribute;
 import org.hisp.dhis.trackedentity.TrackedEntityType;
@@ -59,11 +56,7 @@ import org.hisp.dhis.tracker.domain.MetadataIdentifier;
 import org.hisp.dhis.tracker.domain.Note;
 import org.hisp.dhis.tracker.domain.Relationship;
 import org.hisp.dhis.tracker.domain.TrackedEntity;
-import org.hisp.dhis.tracker.preheat.RelationshipPreheatKeySupport;
 import org.springframework.stereotype.Component;
-
-import com.google.common.base.MoreObjects;
-import com.google.common.collect.ImmutableSet;
 
 /**
  * This class "collects" identifiers from all input objects. This resulting map
@@ -94,8 +87,8 @@ public class TrackerIdentifierCollector
         collectRelationships( identifiers, params.getRelationships() );
         // Using "*" signals that all the entities of the given type have to be
         // preloaded in the Preheat
-        identifiers.put( TrackedEntityType.class, ImmutableSet.of( ID_WILDCARD ) );
-        identifiers.put( RelationshipType.class, ImmutableSet.of( ID_WILDCARD ) );
+        identifiers.put( TrackedEntityType.class, Set.of( ID_WILDCARD ) );
+        identifiers.put( RelationshipType.class, Set.of( ID_WILDCARD ) );
 
         collectProgramRulesFields( identifiers );
         return identifiers;
@@ -103,13 +96,18 @@ public class TrackerIdentifierCollector
 
     private void collectProgramRulesFields( Map<Class<?>, Set<String>> map )
     {
+        // collecting program rule dataElement/attributes deliberately using
+        // UIDs
+        // Rule engine rules only know UIDs, so we need to be able to get
+        // dataElements/attributes from rule actions
+        // out of the preheat using UIDs
         List<ProgramRule> programRules = programRuleService.getProgramRulesLinkedToTeaOrDe();
+
         Set<String> dataElements = programRules.stream()
             .flatMap( pr -> pr.getProgramRuleActions().stream() )
             .filter( a -> Objects.nonNull( a.getDataElement() ) )
             .map( a -> a.getDataElement().getUid() )
             .collect( Collectors.toSet() );
-
         dataElements.forEach( de -> addIdentifier( map, DataElement.class, de ) );
 
         Set<String> attributes = programRules.stream()
@@ -117,7 +115,6 @@ public class TrackerIdentifierCollector
             .filter( a -> Objects.nonNull( a.getAttribute() ) )
             .map( a -> a.getAttribute().getUid() )
             .collect( Collectors.toSet() );
-
         attributes.forEach( attribute -> addIdentifier( map, TrackedEntityAttribute.class, attribute ) );
     }
 
@@ -170,10 +167,8 @@ public class TrackerIdentifierCollector
             addIdentifier( identifiers, ProgramStage.class, event.getProgramStage() );
             addIdentifier( identifiers, OrganisationUnit.class, event.getOrgUnit() );
 
-            Stream
-                .of( MoreObjects.firstNonNull( event.getAttributeCategoryOptions(), "" ).split( TextUtils.SEMICOLON ) )
-                .forEach(
-                    s -> addIdentifier( identifiers, CategoryOption.class, s ) );
+            event.getAttributeCategoryOptions()
+                .forEach( s -> addIdentifier( identifiers, CategoryOption.class, s ) );
 
             addIdentifier( identifiers, CategoryOptionCombo.class, event.getAttributeOptionCombo() );
 
@@ -191,19 +186,18 @@ public class TrackerIdentifierCollector
 
             addIdentifier( identifiers, Relationship.class, relationship.getRelationship() );
 
-            if ( RelationshipPreheatKeySupport.hasRelationshipKey( relationship ) )
+            if ( Objects.nonNull( relationship.getFrom() ) )
             {
+                addIdentifier( identifiers, TrackedEntity.class, relationship.getFrom().getTrackedEntity() );
+                addIdentifier( identifiers, Enrollment.class, relationship.getFrom().getEnrollment() );
+                addIdentifier( identifiers, Event.class, relationship.getFrom().getEvent() );
+            }
 
-                RelationshipKey relationshipKey = RelationshipPreheatKeySupport.getRelationshipKey( relationship );
-                addIdentifier( identifiers, Relationship.class, relationshipKey.asString() );
-
-                addIdentifier( identifiers, TrackedEntity.class, relationshipKey.getFrom().getTrackedEntity() );
-                addIdentifier( identifiers, Enrollment.class, relationshipKey.getFrom().getEnrollment() );
-                addIdentifier( identifiers, Event.class, relationshipKey.getFrom().getEvent() );
-
-                addIdentifier( identifiers, TrackedEntity.class, relationshipKey.getTo().getTrackedEntity() );
-                addIdentifier( identifiers, Enrollment.class, relationshipKey.getTo().getEnrollment() );
-                addIdentifier( identifiers, Event.class, relationshipKey.getTo().getEvent() );
+            if ( Objects.nonNull( relationship.getTo() ) )
+            {
+                addIdentifier( identifiers, TrackedEntity.class, relationship.getTo().getTrackedEntity() );
+                addIdentifier( identifiers, Enrollment.class, relationship.getTo().getEnrollment() );
+                addIdentifier( identifiers, Event.class, relationship.getTo().getEvent() );
             }
         } );
     }
